fixed disoriented module landing page, overflow not hidden

--- a/carouselM1.css
+++ b/carouselM1.css
@@ -178,7 +178,6 @@ body {
 @media only screen and (max-width: 1024px) {
     html {
         font-size: 18px;
-        overflow: hidden;
     }
 
     .carousel {
@@ -293,11 +292,13 @@ body {
     }
 
     .quote-short {
-        margin-top: 0%;
+        margin-top: 7%;
     }
 
     .long-text {
-        margin-top: -9%;
+        margin-top: -3%;
+        font-size: 1.2rem;
+
 
     }
 }
