--- a/droneModule.css
+++ b/droneModule.css
@@ -22,38 +22,34 @@ html, body{
 .navbar-custom{
     background-color:#95cdf7;
 }
-/* .wrapper {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    padding: 0;
-    margin: 0;
-   /* border: 1px black solid; 
-} */
+
 
 .outer-box{
-    position: absolute;
+    position: relative;
     width: 75%;
     height: 75%;
-    padding: 2% 3% 2% 3%;
-    margin: 4% 15% 7% 13%;
-    /* border: 1px pink solid; */
+    margin: 7% auto;
     background-color:#caf1ff
 }
 
-.col-sm-3{
+.inner-box{
     position: relative;
     background-color:#95cdf7;
-    margin: 4% 4%;
+    width: 80%;
+    margin: 7% auto;
+    padding: 3% 3%;
     text-align: center;
+}
+.topic-box, .btn{
+    position: relative;
+    font-size: 1.05rem;
 }
 
 .img{
     width: 60%;
-    height: 50%;
+    height: 60%;
    margin: 2% 5%;
     /* border: 1px pink solid; */
-
 }
 
 
@@ -64,7 +60,16 @@ html, body{
 .btn{
     background-color: #fff1c3;
     border-color: #fff1c3;
-
+    margin: 2% auto;
+}
+@media only screen and (min-width: 1025px) {
+    html {
+        font-size: 16px;
+    }
+    .col-md-3{
+        width: 25%;
+        padding: 3% 3%;
+    }
 }
 
 
